--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -429,7 +429,7 @@ dopepod
       <a class="btn-dope btn-dope-social socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Sign in with Google">
         <div class="social-button social-icon" id="google-icon">
           {% if request.is_ajax %}
-            <i class='fab fa-google icon'></i>
+            <i class='fab fa-google'></i>
           {% else %}
             G
           {% endif %}
