--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li>
-        <a class="dopebar-link browse-link" href="/search/?view=list">
+        <a class="dopebar-link browse-link" href="{% url 'search' %}">
           Browse
         </a>
       </li>
