--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -5,7 +5,7 @@ dopepod
 {% endblock %}
 
 {% block center-stage %}
-<div class="col-12 results color-5-trans">
+<div class="col-12 results color-5-trans {{ results.view }}">
   <div class="row results-bar">
     <div class="col-12 results-header">
       {% if results.extra_options %}
