--- a/index/static/style.css
+++ b/index/static/style.css
@@ -503,156 +503,26 @@ a:hover {
   box-shadow: none;
   transition: all .15s ease-in-out;
 }
-.logo-final:hover {
-  color: #fff;
-  outline: none;
-  background: rgba(0, 191, 165, 1);
-  -webkit-box-shadow: rgba(0,0,0,.8) 0 0px 5px;
-  -moz-box-shadow: rgba(0,0,0,.8) 0 0px 5px;
-  box-shadow: rgba(0,0,0,.8) 0 0px 5px;
-}
 .logo-1 {
   left: 0px;
-  animation: spinLeft .25s ease-in .6s forwards;
-  -webkit-animation: spinLeft .25s ease-in .6s forwards;
 }
 .logo-2 {
   left: 39px;
-  animation: spinLeft .25s ease-in .4s forwards;
-  -webkit-animation: spinLeft .25s ease-in .4s forwards;
 }
 .logo-3 {
   left: 78px;
-  animation: spinLeft .25s ease-in .2s forwards;
-  -webkit-animation: spinLeft .25s ease-in .2s forwards;
 }
 .logo-4 {
   left: 117px;
-  animation: spinRight .25s ease-in forwards, spinLeft .25s ease-in 1.8s forwards;
-  -webkit-animation: spinRight .25s ease-in forwards, spinLeft .25s ease-in 1.8s forwards;
 }
 .logo-5 {
   left: 156px;
-  animation: spinRight .25s ease-in .2s forwards, spinLeft .25s ease-in 1.7s forwards;
-  -webkit-animation: spinRight .25s ease-in .2s forwards, spinLeft .25s ease-in 1.7s forwards;
 }
 .logo-6 {
   left: 195px;
-  animation: spinRight .25s ease-in .4s forwards, spinLeft .25s ease-in 1.6s forwards;
-  -webkit-animation: spinRight .25s ease-in .4s forwards, spinLeft .25s ease-in 1.6s forwards;
 }
 .logo-7 {
   left: 234px;
-  animation: spinRight .25s ease-in .6s forwards, spinLeft .25s ease-in 1.5s forwards;
-  -webkit-animation: spinRight .25s ease-in s forwards, spinLeft .25s ease-in 1.5s forwards;
-}
-.logo-final {
-  animation: inherit;
-  -webkit-animation: inherit;
-  color: inherit;
-  border: 2px solid rgba(0, 191, 165, 1);
-}
-@keyframes spinLeft {
-  0% {
-    opacity: 0;
-    border: 2px solid rgba(0, 191, 165, 0);
-    transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-  }
-  100% {
-    opacity: 1;
-    border: 2px solid rgba(0, 191, 165, 1);
-    transform: scaleX(1);
-    -o-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-  }
-}
-@-webkit-keyframes spinLeft {
-  0% {
-    opacity: 0;
-    border: 2px solid rgba(0, 191, 165, 0);
-    transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-  }
-  100% {
-    opacity: 1;
-    border: 2px solid rgba(0, 191, 165, 1);
-    transform: scaleX(1);
-    -o-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-  }
-}
-@keyframes spinRight {
-  0% {
-    opacity: 0;
-    border: 2px solid rgba(0, 191, 165, 0);
-    transform: scaleX(1);
-    -o-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-  }
-  100% {
-    opacity: 1;
-    border: 2px solid rgba(0, 191, 165, 1);
-    transform: scaleX(-1);
-    -o-transform: scaleX(-1); /** Opera **/
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1); /** Firefox **/
-    -webkit-transform: scaleX(-1); /** Chrome & Safari **/
-  }
-}
-@-webkit-keyframes spinRight {
-  0% {
-    opacity: 0;
-    border: 2px solid rgba(0, 191, 165, 0);
-    transform: scaleX(1);
-    -o-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-  }
-  100% {
-    opacity: 1;
-    border: 2px solid rgba(0, 191, 165, 1);
-    transform: scaleX(-1);
-    -o-transform: scaleX(-1); /** Opera **/
-    -ms-transform: scaleX(-1);
-    -moz-transform: scaleX(-1); /** Firefox **/
-    -webkit-transform: scaleX(-1); /** Chrome & Safari **/
-  }
-}
-@keyframes nothing {
-  0% {
-    color: rgba(0, 0, 0, 0);
-  }
-  100% {
-    color: rgba(0, 0, 0, 0);
-  }
-}
-@-webkit-keyframes nothing {
-  0% {
-    color: rgba(0, 0, 0, 0);
-  }
-  100% {
-    color: rgba(0, 0, 0, 0);
-  }
-}
-#nothing {
-  animation: nothing .5s 2s;
-  -webkit-animation: nothing .5s 2s;
-  color: inherit;
-  border: none;
 }
 
 /* DASHBOARD */
@@ -723,77 +593,18 @@ a:hover {
   text-align: justify;
   margin-bottom: 4px;
 }
-.showpod-image {
-  position: static;
-  transition: all .15s ease-in-out;
-  -moz-transition: all .15s ease-in-out;
-  -webkit-transition: all .15s ease-in-out;
-}
-.showpod-image img {
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  border-radius: .25rem;
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
-}
-.showpod-badge {
-  top: 60px;
-  position: fixed;
-  cursor: pointer;
-  overflow: visible;
-  z-index: 9001;
-  transition: all .1s ease-in-out;
-  -moz-transition: all .1s ease-in-out;
-  -webkit-transition: all .1s ease-in-out;
-}
-.showpod-badge img {
-  border-radius: 50%;
-  height: 60px;
-  width: 60px;
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 10px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 10px;
-  box-shadow: rgba(0,0,0,.5) 0 0 10px;
-}
-.showpod-badge:hover {
-  transform: scale(1.1);
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
-}
 
 /* SPLASH LOGO */
-.splash-logo {
+.circle-loading {
   position: relative;
   border-radius: 50%;
   font-size: 30px;
   font-weight: 600;
   height: 70px;
   width: 70px;
-  overflow: hidden;
   margin: auto;
-  color: rgb(46, 46, 46);
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  box-shadow: rgba(0,0,0,.5) 0 0 5px;
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
 }
-.splash-badge {
-  position: fixed;
-  top: 15px;
-  transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  -webkit-transition: all .2s ease-in-out;
-}
-.splash-badge:hover {
-  -webkit-box-shadow: rgba(0,0,0,.5) 0 0 10px;
-  -moz-box-shadow: rgba(0,0,0,.5) 0 0 10px;
-  box-shadow: rgba(0,0,0,.5) 0 0 10px;
-}
-.splash-logo .char {
+.circle-loading .char {
   left: 27px;
   top: -8px;
   position: absolute;
