--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,9 @@
-<div class="logo-wrapper noselect">
-  <span class="logo logo-1">d</span>
-  <span class="logo logo-2">o</span>
-  <span class="logo logo-3">p</span>
-  <span class="logo logo-4">e</span>
-  <span class="logo logo-5">p</span>
-  <span class="logo logo-6">o</span>
-  <span class="logo logo-7">d</span>
+<div class="logo-wrapper">
+  <span class="btn-dope alphabet-button">d</span>
+  <span class="btn-dope alphabet-button">o</span>
+  <span class="btn-dope alphabet-button">p</span>
+  <span class="btn-dope alphabet-button">e</span>
+  <span class="btn-dope alphabet-button">p</span>
+  <span class="btn-dope alphabet-button">o</span>
+  <span class="btn-dope alphabet-button">d</span>
 </div>
