--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -422,10 +422,10 @@ dopepod
           </a>
         {% endif %}
       {% endif %}
-      <a class="d-none" id="password-tab" data-toggle="pill" href="#tabs-password" role="tab" aria-controls="tabs-password" aria-selected="false">
-      </a>
+      <a class="d-none" id="splash-tab" data-toggle="pill" href="#tabs-splash" role="tab" aria-controls="tabs-splash" aria-selected="false"></a>
+      <a class="d-none" id="password-tab" data-toggle="pill" href="#tabs-password" role="tab" aria-controls="tabs-password" aria-selected="false"></a>
     </div>
-    <div id="social-buttons">
+    <div class="social-buttons">
       <a class="btn-dope btn-dope-social socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Sign in with Google">
         <div class="social-button social-icon" id="google-icon">
           {% if request.is_ajax %}
