--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -9,7 +9,7 @@ dopepod
   <div class="row results-bar">
     <div class="col-12 results-header">
       {% if results.extra_options %}
-        <button class="btn-dope back-button results-back" onclick="window.history.back()">
+        <button class="btn-dope results-back" onclick="window.history.back()">
           {% if request.is_ajax %}
             <i class="fas fa-arrow-circle-left"></i>
           {% else %}
