--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -6,7 +6,8 @@
           <span class="charts-rank">
             {{ forloop.counter }}
           </span>
-          <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
+          <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
+          onerror="this.src='https://{{ podcast.artworkUrl }}100x100bb.jpg'" />
           <h1>
             {{ podcast.title }}
           </h1>
