--- a/podcasts/templates/last_played.html
+++ b/podcasts/templates/last_played.html
@@ -8,7 +8,8 @@
           {{ episode.length }}
         </span>
         {% endif %}
-        <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg" />
+        <img class="img-fluid" src="https://dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg"
+        onerror="this.src='https://{{ episode.podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
       <a class="showpod" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
         <h1>
