--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -4,7 +4,7 @@
     <div class="color-4-trans" id="player-wrapper">
       <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
         <img class="img-fluid" src="https://dopepod.me/img/{{ player.episode.podcast.artworkUrl }}100x100bb.jpg"
-        onerror="this.src='https://{{ podcast.artworkUrl }}100x100bb.jpg'" />
+        onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
       </a>
       <div id="player-buttons">
         <a class="btn-dope" id="player-minimize" href="#" aria-label="Minimize">
