--- a/podcasts/templates/search.html
+++ b/podcasts/templates/search.html
@@ -7,7 +7,7 @@
     <div class="col-lg-2 col-md-3 col-4 result-box">
       <a class="showpod" data-podid="{{ podcast.podid }}" href="{% url 'showpod' podid=podcast.podid %}" title="{{ podcast.title }}">
           <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}200x200bb.jpg"
-          onerror="this.src='https://{{ podcast.artworkUrl }}200x200bb.jpg'" />
+          onerror="this.src='http://{{ podcast.artworkUrl }}200x200bb.jpg'" />
           <h1>
             {{ podcast.title }}
           </h1>
