--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -11,7 +11,7 @@ Listen to episodes of {{ podcast.title }} on dopepod
       <!-- BADGE -->
       <div class="showpod-image">
         <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}360x360bb.jpg"
-        onerror="this.src='https://{{ podcast.artworkUrl }}360x360bb.jpg'" />
+        onerror="this.src='http://{{ podcast.artworkUrl }}360x360bb.jpg'" />
       </div>
     </div>
     <div class="col-12 col-lg-5" id="showpod-c" data-podid="{{ podcast.podid }}">
