--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -5,7 +5,7 @@
         <div class="subscriptions-result clearfix">
           <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg"
-            onerror="this.src='https://{{ podcast.artworkUrl }}100x100bb.jpg'" />
+            onerror="this.src='http://{{ podcast.artworkUrl }}100x100bb.jpg'" />
           </a>
           <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <h1 class="result-title">
